Prevent front page SVG from overflowing like that.

--- a/src/css/_brand.css
+++ b/src/css/_brand.css
@@ -80,7 +80,7 @@ aside {
 
   svg {
     width: 20rem;
-    max-width: 100vw;
+    max-width: 50vw;
   }
 
   h2 {
